examples/test/testpolicy18023.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18023
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key18: value40
      key41: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value28
          key21: value47
          key3: value12
      podSelector:
        matchLabels:
          key1: value23
          key11: value5
          key22: value14
